--- a/neon.html
+++ b/neon.html
@@ -80,7 +80,7 @@
 	</div>
 	<br>
 		<h4 class="text7" id="about">this was made by a very bored student.</h4>
-		<a href="mailto:coldmagmaig@gmail.com?" subject="your code is really sloppy. here are some suggestions." class="mail">suggest changes</a>
+		<a href="mailto:coldmagmaig@gmail.com" subject="your code is really sloppy. here are some suggestions." class="mail">suggest changes</a>
 		
 	<br>
 	<br>
@@ -88,7 +88,7 @@
 	<br>
 	<div class="link">
 		<p class="text8">i know the code is very sloppy. feel free to hit me up.</p>
-		<a href="https://github.com/cold-magma" class="gitlink">@cold-magma</a>
+		<a href="https://github.com/cold-magma" class="gitlink" target="_blank">@cold-magma</a>
 	</div>
 </body>
 
