--- a/neon.html
+++ b/neon.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>NEON</title>
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/neonstylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
