more animation changes

--- a/pilot.html
+++ b/pilot.html
@@ -12,6 +12,6 @@
 			<path d="M1.5 1.5H1614.55V16.5H1.5V1.5Z" stroke="#FF7F50" stroke-width="3" stroke-linejoin="round"/>
 		</svg>
 	</header>
-	<p>still working on this... <span>|</span></p>
+	<p>still working on this <span>_</span></p>
 </body>
 </html>
