scroll added to index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<div class="div1">
 		<a class="neon" href="neon.html">NEON</a>
 	</div>
+
+	<div class="div3">
+		<p>scroll</p>
+		<svg class="scroll" width="32" height="52" viewBox="0 0 32 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+			<path fill-rule="evenodd" clip-rule="evenodd" d="M30.416 37.136L17.453 50.5812C16.6575 51.4063 15.3678 51.4063 14.5723 50.5812L1.60924 37.136C0.813767 36.3109 0.813767 34.9732 1.60924 34.1481C2.40472 33.3231 3.69444 33.3231 4.48992 34.1481L13.9757 43.9867L13.9757 1.2L18.0496 1.2L18.0496 43.9867L27.5353 34.1481C28.3308 33.3231 29.6205 33.3231 30.416 34.1481C31.2115 34.9732 31.2115 36.3109 30.416 37.136Z" stroke="#2196F3" stroke-width="1.5" stroke-linejoin="round"/>
+		</svg>
+
+	</div>
+	
 	
 	<div class="div2">
 		<a class="pilot" href="javascript:setTimeout(()=>{window.location = 'pilot.html' },3000);">
