--- a/pilot.html
+++ b/pilot.html
@@ -21,7 +21,7 @@
 			</a>
 			<br>
 
-			<a href="" class="aboutlink">
+			<a href="#inf" class="aboutlink">
 				<svg class="about" width="287" height="22" viewBox="0 0 287 22" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<mask id="path-1-outside-1" maskUnits="userSpaceOnUse" x="0.143997" y="-0.167999" width="287" height="22" fill="black">
 					<rect fill="white" x="0.143997" y="-0.167999" width="287" height="22"/>
@@ -79,7 +79,7 @@
 
 	<div id="particles-js"></div>
 
-	<h3>Wait you did touch it right? No? Go back. Now!</h3>
+	<h3 id="inf">Wait you did touch it right? No? Go back. Now!</h3>
 
 	<p></p>
 
