--- a/pilot.html
+++ b/pilot.html
@@ -86,6 +86,8 @@
 	
 	<h3>still working on this <span>_</span></h3>
 
+	<div class="link"><a class="gitlink" href="https://github.com/cold-magma">@COLD-MAGMA</a></div>
+
 	<script type="text/javascript" src="particles.js"></script>
 	<script type="text/javascript" src="pilotapp.js"></script>
 </body>
