--- a/pilot/pilot.html
+++ b/pilot/pilot.html
@@ -87,7 +87,7 @@
 
 	<div class="link"><a class="gitlink" href="https://github.com/cold-magma">@COLD-MAGMA</a></div>
 
-	<script type="text/javascript" src="particles.js"></script>
-	<script type="text/javascript" src="pilotapp.js"></script>
+	<script type="text/javascript" src="js/particles.js"></script>
+	<script type="text/javascript" src="js/pilotapp.js"></script>
 </body>
 </html>
