responsiveness for breathe

--- a/breathe/breathe.html
+++ b/breathe/breathe.html
@@ -13,8 +13,7 @@
 		<h1>So just...</h1>
 	</div>
 	<div class="parallax2" data-parallax="scroll" data-image-src="./content/beach1.jpg" data-z-index="-1">
-		<h1 class="p2">Stop</h1>
-		<h1 class="p21">thinking</h1>
+		<h1 class="p2">Stop thinking</h1>
 	</div>
 	<div class="layer3">
 		<h1>Just take a step back.</h1>
