--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ git: @cold-magma
 	<title>F L O W</title>
 	<link rel="stylesheet" type="text/css" href="css/indexstylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="div1">
