--- a/breathe/breathe.html
+++ b/breathe/breathe.html
@@ -17,7 +17,7 @@
 	</div>
 	<div class="layer3">
 		<h1>Just take a step back.</h1>
-		<h1>Reflect on what are those little things that make you smile. Because they do what overthinking never could.</h1>
+		<h1>Reflect on those little things that make you smile. Because they do what overthinking never could.</h1>
 	</div>
 	<div class="parallax3" data-parallax="scroll" data-image-src="./content/beach2.jpg" data-z-index="-1">
 		<h1 class="p1">So just smile.</h1>
