--- a/breathe/breathe.html
+++ b/breathe/breathe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	<title>upside down</title>
+	<title>BREATHE</title>
 	<link rel="stylesheet" type="text/css" href="css/breathestylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head> 
