--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <!-- 
@@ -10,6 +11,7 @@ git: @cold-magma
 	<title>F L O W</title>
 	<link rel="stylesheet" type="text/css" href="css/indexstylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bree+Serif|Righteous&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -56,6 +58,12 @@ git: @cold-magma
 		</svg>
 
 	</div>
+	
+	<div class="div5">
+		<a class="empyrean" href="empyrean/empyrean.html">EMPYREAN</a>
+	</div>
+
+	
 
 	<script src="indexapp.js"></script>
 
