--- a/breathe/breathe.html
+++ b/breathe/breathe.html
@@ -25,7 +25,7 @@
 </div>
 <footer>
 	<h3>I know this is cheesy. Don't @ me. Please. Just smile for god's sake. Thanks.</h3>
-	<a href="">@cold-magma</a>
+	<a href="https://github.com/cold-magma">@cold-magma</a>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="parallax.min.js"></script>
