--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -47,7 +47,7 @@
 	<div class="cont"></div>
 	<br>
 	<footer id="footer">
-		<a href="https://github.com/cold-magma">@COLD-MAGMA</a>
+		<a href="https://github.com/cold-magma" target="_blank">@COLD-MAGMA</a>
 	</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
