--- a/pilot/pilot.html
+++ b/pilot/pilot.html
@@ -91,7 +91,7 @@ git: @cold-magma
 	
 	<h3>still working on this <span>_</span></h3>
 
-	<div class="link"><a class="gitlink" href="https://github.com/cold-magma">@COLD-MAGMA</a></div>
+	<div class="link"><a class="gitlink" href="https://github.com/cold-magma" target="_blank">@COLD-MAGMA</a></div>
 
 	<script type="text/javascript" src="js/particles.js"></script>
 	<script type="text/javascript" src="js/pilotapp.js"></script>
