neon made responsive

--- a/neon/neon.html
+++ b/neon/neon.html
@@ -12,8 +12,8 @@ git: @cold-magma
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div class="navbar">
+	<header id="navheader">
+		<div id="navbar" class="navbar">
 			<h1 class="navname">NEON</h1>
 
 			<nav>
@@ -95,7 +95,7 @@ git: @cold-magma
 		<a href="https://github.com/cold-magma" class="gitlink" target="_blank">@cold-magma</a>
 	</div>
 
-	
+	<script type="text/javascript" src="neonapp.js"></script>
 </body>
 
 </html>
