--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -38,10 +38,14 @@
 		<p id="p10" class="lax" data-lax-preset="linger fadeInOut">Each with it's moments of sorrow and that of glee.</p>
 	</div>
 	<div class="context">
+		<br>
 		<p id="p11" class="lax" data-lax-preset="linger fadeInOut">Thanks for reading!</p>
 		<p id="p12" class="lax" data-lax-preset="linger fadeInOut">And scrolling!</p>
 		<p id="p13" class="lax" data-lax-preset="linger fadeInOut">Want to suggest changes?</p>
 		<p id="p14" class="lax" data-lax-preset="linger fadeInOut">Send me a mail. E-mail in the readme.</p>
+		<span></span>
+		<span></span>
+		<span></span>
 		<p id="p15" class="lax" data-lax-preset="linger fadeInOut">E M P Y R E A N</p>
 	</div>
 	<div class="cont"></div>
