added loader for empyrean

--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -52,6 +52,10 @@
 	<footer id="footer">
 		<a href="https://github.com/cold-magma" target="_blank">@COLD-MAGMA</a>
 	</footer>
+
+	<div id="wrapper" class="loader-wrapper">
+		<div class="loader"></div>
+	</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
 <script type="text/javascript" src="app.js"></script>
