more code optimizaion

--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -39,7 +39,7 @@
 	<div class="context">
 		<br>
 		<p id="p11" class="lax" data-lax-preset="linger fadeInOut">Thanks for reading!</p>
-		<p id="p12" class="lax" data-lax-preset="linger fadeInOut">And scrolling!</p>
+		<p id="p12" class="lax" data-lax-preset="linger fadeInOut">And for scrolling!</p>
 		<p id="p13" class="lax" data-lax-preset="linger fadeInOut">Want to suggest changes?</p>
 		<p id="p14" class="lax" data-lax-preset="linger fadeInOut">Send me a mail. E-mail in the readme.</p>
 		<span></span>
