added loaders to breathe

--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="empyreanstylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Playfair+Display&display=swap" rel="stylesheet">
 </head>
-
+<body class="scroll">
 	<div class="main" id="main">
 		<div id="d1" class="lax" data-lax-bg-pos-y="0 0, 10 0, 20 -5, 30 -10, 40 -15, 50 -20, 60 -25, 70 -30, 80 -35, 90 -40 , 100 -50, 150 -75, 200 -100, 300 -150, 400 -200, 500 -250"></div>
 		
