--- a/breathe/breathe.html
+++ b/breathe/breathe.html
@@ -5,29 +5,41 @@
 	<link rel="stylesheet" type="text/css" href="css/breathestylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head> 
-<body> 
-<div class="main">
-	<div class="parallax1" data-parallax="scroll" data-image-src="./content/beach4.jpg" data-z-index="-1"><h1 class="p1">breathe</h1></div> 
-	<div class="layer2">
-		<h1>Sometimes we think too much about stuff that does not warrant our attention. At least not as much as we give it anyway. We think too hard.</h1>
-		<h1>So just...</h1>
+<body class="scroll"> 
+	<div class="main">
+		<div class="parallax1" data-parallax="scroll" data-image-src="./content/beach4.jpg" data-z-index="-1">
+			<h1 class="p1">breathe</h1>
+		</div> 
+		<div class="layer2">
+			<h1>Sometimes we think too much about stuff that does not warrant our attention. At least not as much as we give it anyway. We think too hard.</h1>
+			<h1>So just...</h1>
+		</div>
+		<div class="parallax2" data-parallax="scroll" data-image-src="./content/beach1.jpg" data-z-index="-1">
+			<h1 class="p2">Stop thinking</h1>
+		</div>
+		<div class="layer3">
+			<h1>Just take a step back.</h1>
+			<h1>Reflect on those little things that make you smile. Because they do what overthinking never could.</h1>
+		</div>
+		<div class="parallax3" data-parallax="scroll" data-image-src="./content/beach2.jpg" data-z-index="-1">
+			<h1 class="p1">So just smile.</h1>
+		</div>
 	</div>
-	<div class="parallax2" data-parallax="scroll" data-image-src="./content/beach1.jpg" data-z-index="-1">
-		<h1 class="p2">Stop thinking</h1>
+	<footer>
+		<h3>I know this is cheesy. Don't @ me. Please. Just smile for god's sake. Thanks.</h3>
+		<a href="https://github.com/cold-magma" target="_blank">@cold-magma</a>
+	</footer>
+	<div class="loader-wrapper">
+		<div class="loader">
+			<span class="obj"></span>
+			<span class="obj"></span>
+			<span class="obj"></span>
+			<span class="obj"></span>
+			<span class="obj"></span>
+		</div>
 	</div>
-	<div class="layer3">
-		<h1>Just take a step back.</h1>
-		<h1>Reflect on those little things that make you smile. Because they do what overthinking never could.</h1>
-	</div>
-	<div class="parallax3" data-parallax="scroll" data-image-src="./content/beach2.jpg" data-z-index="-1">
-		<h1 class="p1">So just smile.</h1>
-	</div>
-</div>
-<footer>
-	<h3>I know this is cheesy. Don't @ me. Please. Just smile for god's sake. Thanks.</h3>
-	<a href="https://github.com/cold-magma" target="_blank">@cold-magma</a>
-</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="parallax.min.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body> 
 </html> 
