--- a/mirage/mirage.html
+++ b/mirage/mirage.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="miragestylesheet.css">
 </head>
 <body>
-	<div data-hover-only="true" data-limit-x="true" data-limit-y="50" data-scalar-x="5.0" data-scalar-y="2.0" data-origin-y="0" data-relative-input="true" id="scene">
+	<div data-hover-only="true" data-limit-y="true" data-origin-x="1" data-scalar-x="5.0" data-scalar-y="1.0" data-origin-y="1" data-relative-input="true" id="scene">
 		<div class="layers" id="layer1" data-depth="0.55"></div>
 		<div class="layers" id="layer2" data-depth="0.50"></div>
 		<div class="layers" id="layer3" data-depth="0.45"></div>
