--- a/mirage/mirage.html
+++ b/mirage/mirage.html
@@ -3,8 +3,10 @@
 <head>
 	<title>MIRAGE</title>
 	<link rel="stylesheet" type="text/css" href="miragestylesheet.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
-<body data-limit-y="true" data-origin-x="1" data-scalar-x="6.0" data-scalar-y="1.0" data-origin-y="1" id="scene">
+<body>
+	<div data-scalar-x="6.0" data-scalar-y="1.0" data-origin-y="1" id="scene">
 		<div class="layers" id="layer1" data-depth="0.55"></div>
 		<div class="layers" id="layer2" data-depth="0.50"></div>
 		<div class="layers" id="layer3" data-depth="0.45"></div>
@@ -19,6 +21,7 @@
 		<div class="layers" id="layer12" data-depth="0.15"></div>
 		<div class="layers" id="layer13" data-depth="0.1"></div>
 		<div class="layers" id="layer14" data-depth="0.05"></div>
+		<div class="layers" id="txtlayer" data-depth="0.6"><h1>MIRAGE</h1></div>
 	</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 <script src="app.js"></script>
