--- a/mirage/mirage.html
+++ b/mirage/mirage.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>MIRAGE</title>
+	<meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no” />
 	<link rel="stylesheet" type="text/css" href="miragestylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
-<body>
+<body scroll="no">
 	<div data-scalar-x="6.0" data-scalar-y="1.0" data-origin-y="1" id="scene">
 		<div class="layers" id="layer1" data-depth="0.55"></div>
 		<div class="layers" id="layer2" data-depth="0.50"></div>
