--- a/mirage/mirage.html
+++ b/mirage/mirage.html
@@ -22,7 +22,14 @@
 		<div class="layers" id="layer12" data-depth="0.15"></div>
 		<div class="layers" id="layer13" data-depth="0.1"></div>
 		<div class="layers" id="layer14" data-depth="0.05"></div>
-		<div class="layers" id="txtlayer" data-depth="0.6"><h1>MIRAGE</h1></div>
+		<div class="layers" id="txtlayer" data-depth="0.6"><h1 onclick="popup()">MIRAGE</h1></div>
+	</div>
+	<div class="pop" id="popupdivbg"></div>
+	<div class="pop" id="popupdiv">
+		<div class="popup">
+			<p>A mirage is a naturally occurring optical phenomenon in which light rays bend via refraction to produce a displaced image of distant objects or the sky.</p>
+			<a href="https://github.com/cold-magma" target="_blank">@COLD-MAGMA</a>
+		</div>
 	</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 <script src="app.js"></script>
