mirahe added to index

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@ git: @cold-magma
 		<a class="empyrean" href="empyrean/empyrean.html">EMPYREAN</a>
 	</div>
 
-	
+	<div class="div6">
+		<a class="mirage" href="mirage/mirage.html">MIRAGE</a>
+	</div>
 
 	<script src="indexapp.js"></script>
 
