--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ git: @cold-magma
 		<a class="neon" href="neon/neon.html">NEON</a>
 	</div>
 
-	
+	<div class="div9">
+		click to explore
+	</div>
 	
 	
 	<div class="div2">
