--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -22,7 +22,7 @@
 		<p id="p2" class="lax" data-lax-preset="fadeIn">Drifting away on our tiny rock. We are just lost in this expanse.</p>
 		<p id="p3" class="lax" data-lax-preset="fadeIn">For the empyrean is so immense and the reaches so far beyond.</p>
 		<p id="p4" class="lax" data-lax-preset="fadeIn">All we can do is watch it's glorius wonders.</p>
-		<p id="p5" class="lax" data-lax-preset="fadeIn">After all, we are just specs if dust in this immense empyrean.</p>
+		<p id="p5" class="lax" data-lax-preset="fadeIn">After all, we are just specs of dust in this immense empyrean.</p>
 	</div>
 	<div class="content">
 		<img class="lax" data-lax-preset="fadeIn rightToLeft" src="images/pluto.png">
