--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@ git: @cold-magma
 	<div class="div6">
 		<a class="mirage" href="mirage/mirage.html">MIRAGE</a>
 	</div>
+	<div class="git_link">
+		<a class="gitlink" href="https://github.com/cold-magma">@COLD-MAGMA</a>
+	</div>
 
 	<script src="indexapp.js"></script>
 
