--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ git: @cold-magma
 	</div>
 
 	<div class="div9">
-		click to explore
+		<p class="clicktext">
+			click to explore
+		</p>
 	</div>
 	
 	
