--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@ git: @cold-magma
 	</div>
 
 	<div class="div9">
-		<p class="clicktext">
-			click to explore
-		</p>
+		<p class="clicktext">click to explore</p>
 	</div>
 	
 	
