--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ git: @cold-magma
 <head>
 	<title>F L O W</title>
 	<meta charset="UTF-8">
-  	<meta name="description" content="Free Web tutorials">
+  	<meta name="description" content="FLOW by cold-magma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
-  	<meta name="author" content="John Doe">
+  	<meta name="author" content="cold-magma">
 	<link rel="stylesheet" type="text/css" href="css/indexstylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bree+Serif|Righteous&display=swap" rel="stylesheet">
