--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ git: @cold-magma
 <head>
 	<title>F L O W</title>
 	<meta charset="UTF-8">
-  	<meta name="description" content="FLOW by cold-magma">
+  	<meta name="description" content="FLOW by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
   	<meta name="author" content="cold-magma">
 	<link rel="stylesheet" type="text/css" href="css/indexstylesheet.css">
