--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>EMPYREAN</title>
 	<link rel="stylesheet" type="text/css" href="empyreanstylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Playfair+Display&display=swap" rel="stylesheet">
 </head>
