added meta tags to all html files

--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>EMPYREAN</title>
+	<meta charset="UTF-8">
+  	<meta name="description" content="FLOW by coldmagma">
+  	<meta name="keywords" content="HTML, CSS, JavaScript">
+  	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="empyreanstylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Playfair+Display&display=swap" rel="stylesheet">
 </head>
