--- a/neon/neon.html
+++ b/neon/neon.html
@@ -8,6 +8,10 @@ git: @cold-magma
 <html>
 <head>
 	<title>NEON</title>
+	<meta charset="UTF-8">
+  	<meta name="description" content="FLOW by coldmagma">
+  	<meta name="keywords" content="HTML, CSS, JavaScript">
+  	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="css/neonstylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
