--- a/breathe/breathe.html
+++ b/breathe/breathe.html
@@ -2,6 +2,10 @@
 <html>
 <head> 
 	<title>BREATHE</title>
+	<meta charset="UTF-8">
+  	<meta name="description" content="FLOW by coldmagma">
+  	<meta name="keywords" content="HTML, CSS, JavaScript">
+  	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="css/breathestylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head> 
