--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ git: @cold-magma
 	<meta charset="UTF-8">
   	<meta name="description" content="FLOW by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
-  	<meta name="author" content="cold-magma">
+  	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="css/indexstylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bree+Serif|Righteous&display=swap" rel="stylesheet">
