added metas to all html files

--- a/empyrean/empyrean.html
+++ b/empyrean/empyrean.html
@@ -3,7 +3,7 @@
 <head>
 	<title>EMPYREAN</title>
 	<meta charset="UTF-8">
-  	<meta name="description" content="FLOW by coldmagma">
+  	<meta name="description" content="EMPYREAN by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
   	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="empyreanstylesheet.css">
