--- a/neon/neon.html
+++ b/neon/neon.html
@@ -9,7 +9,7 @@ git: @cold-magma
 <head>
 	<title>NEON</title>
 	<meta charset="UTF-8">
-  	<meta name="description" content="FLOW by coldmagma">
+  	<meta name="description" content="NEON by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
   	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="css/neonstylesheet.css">
