--- a/breathe/breathe.html
+++ b/breathe/breathe.html
@@ -3,7 +3,7 @@
 <head> 
 	<title>BREATHE</title>
 	<meta charset="UTF-8">
-  	<meta name="description" content="FLOW by coldmagma">
+  	<meta name="description" content="BREATHE by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
   	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="css/breathestylesheet.css">
