--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ git: @cold-magma
 <head>
 	<title>F L O W</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   	<meta name="description" content="FLOW by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
   	<meta name="author" content="coldmagma">
