--- a/breathe/breathe.html
+++ b/breathe/breathe.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
   	<meta name="description" content="BREATHE by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="css/breathestylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
