--- a/mirage/mirage.html
+++ b/mirage/mirage.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
   	<meta name="description" content="MIRAGE by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   	<meta name="author" content="coldmagma">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-rescalable=no">
 	<link rel="stylesheet" type="text/css" href="miragestylesheet.css">
