--- a/neon/neon.html
+++ b/neon/neon.html
@@ -11,6 +11,7 @@ git: @cold-magma
 	<meta charset="UTF-8">
   	<meta name="description" content="NEON by coldmagma">
   	<meta name="keywords" content="HTML, CSS, JavaScript">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   	<meta name="author" content="coldmagma">
 	<link rel="stylesheet" type="text/css" href="css/neonstylesheet.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
