major navbar uodate

--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@ git: @cold-magma
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bree+Serif|Righteous&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
+	<div class="menubtn" id="menu"><p class="menutxt" id="menutxt">MENU</p></div>
+	<nav class="navbar" id="nav">
+		<div class="options"><p class="opttxt">NEON</p></div>
+		<div class="options"><p class="opttxt">PILOT</p></div>
+		<div class="options"><p class="opttxt">BREATHE</p></div>
+		<div class="options"><p class="opttxt">EMPYREAN</p></div>
+		<div class="options"><p class="opttxt">MIRAGE</p></div>
+	</nav>
 	<div class="div3">scroll to continue</div>
 	<div class="div1">
 		<a class="neon" href="neon/neon.html">NEON</a>
