--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@ git: @cold-magma
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bree+Serif|Righteous&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/x-icon" href="flowlogo.png">
 </head>
 <body>
+	<img class="logo" src="flowlogo.png">
 	<div class="menubtn" id="menu"><p class="menutxt" id="menutxt">MENU</p></div>
 	<nav class="navbar" id="nav">
 		<div class="options"><a href="#" onclick="nav.classList.toggle('navactive');"><p class="opttxt">NEON</p></a></div>
